main/antlr/XPathParser.java
// Generated from XPath.g4 by ANTLR 4.13.2
package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape" })
public class XPathParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, Var = 17,
			FOR = 18, LET = 19, WHERE = 20, RETURN = 21, IN = 22, SATISFIES = 23, AND = 24, OR = 25,
			NOT = 26, EMPTY = 27, SOME = 28, EQ = 29, IS = 30, DOC = 31, L_PAREN = 32, R_PAREN = 33,
			SLASH = 34, DOUBLE_SLASH = 35, FILENAME = 36, STRING = 37, ID = 38, WS = 39;
	public static final int RULE_xq = 0, RULE_forClause = 1, RULE_letClause = 2, RULE_forceLetClause = 3,
			RULE_whereClause = 4, RULE_returnClause = 5, RULE_varBinding = 6, RULE_letBinding = 7,
			RULE_cond = 8, RULE_varInXQ = 9, RULE_ap = 10, RULE_rp = 11, RULE_f = 12,
			RULE_tagName = 13, RULE_attName = 14;

	private static String[] makeRuleNames() {
		return new String[] {
				"xq", "forClause", "letClause", "forceLetClause", "whereClause", "returnClause",
				"varBinding", "letBinding", "cond", "varInXQ", "ap", "rp", "f", "tagName",
				"attName"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "','", "'<'", "'>'", "'{'", "'}'", "'</'", "':='", "'='", "'=='",
				"'*'", "'.'", "'..'", "'text()'", "'@'", "'['", "']'", null, "'for'",
				"'let'", "'where'", "'return'", "'in'", "'satisfies'", "'and'", "'or'",
				"'not'", "'empty'", "'some'", "'eq'", "'is'", null, "'('", "')'", "'/'",
				"'//'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[] {
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, "Var", "FOR", "LET", "WHERE", "RETURN",
				"IN", "SATISFIES", "AND", "OR", "NOT", "EMPTY", "SOME", "EQ", "IS", "DOC",
				"L_PAREN", "R_PAREN", "SLASH", "DOUBLE_SLASH", "FILENAME", "STRING",
				"ID", "WS"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "XPath.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public XPathParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqContext extends ParserRuleContext {
		public XqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_xq;
		}

		public XqContext() {
		}

		public void copyFrom(XqContext ctx) {
			super.copyFrom(ctx);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqCommaContext extends XqContext {
		public List<XqContext> xq() {
			return getRuleContexts(XqContext.class);
		}

		public XqContext xq(int i) {
			return getRuleContext(XqContext.class, i);
		}

		public XqCommaContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqComma(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqComma(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqComma(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqApContext extends XqContext {
		public ApContext ap() {
			return getRuleContext(ApContext.class, 0);
		}

		public XqApContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqAp(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqAp(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqAp(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqVarContext extends XqContext {
		public TerminalNode Var() {
			return getToken(XPathParser.Var, 0);
		}

		public XqVarContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqVar(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqVar(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqVar(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqDoubleSlashContext extends XqContext {
		public XqContext xq() {
			return getRuleContext(XqContext.class, 0);
		}

		public TerminalNode DOUBLE_SLASH() {
			return getToken(XPathParser.DOUBLE_SLASH, 0);
		}

		public RpContext rp() {
			return getRuleContext(RpContext.class, 0);
		}

		public XqDoubleSlashContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqDoubleSlash(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqDoubleSlash(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqDoubleSlash(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqSlashContext extends XqContext {
		public XqContext xq() {
			return getRuleContext(XqContext.class, 0);
		}

		public TerminalNode SLASH() {
			return getToken(XPathParser.SLASH, 0);
		}

		public RpContext rp() {
			return getRuleContext(RpContext.class, 0);
		}

		public XqSlashContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqSlash(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqSlash(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqSlash(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqFLWRContext extends XqContext {
		public ForClauseContext forClause() {
			return getRuleContext(ForClauseContext.class, 0);
		}

		public LetClauseContext letClause() {
			return getRuleContext(LetClauseContext.class, 0);
		}

		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class, 0);
		}

		public ReturnClauseContext returnClause() {
			return getRuleContext(ReturnClauseContext.class, 0);
		}

		public XqFLWRContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqFLWR(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqFLWR(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqFLWR(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqStringContext extends XqContext {
		public TerminalNode STRING() {
			return getToken(XPathParser.STRING, 0);
		}

		public XqStringContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqString(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqString(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqString(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqTagContext extends XqContext {
		public TagNameContext open;
		public TagNameContext close;

		public XqContext xq() {
			return getRuleContext(XqContext.class, 0);
		}

		public List<TagNameContext> tagName() {
			return getRuleContexts(TagNameContext.class);
		}

		public TagNameContext tagName(int i) {
			return getRuleContext(TagNameContext.class, i);
		}

		public XqTagContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqTag(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqTag(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqTag(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqForceLetContext extends XqContext {
		public ForceLetClauseContext forceLetClause() {
			return getRuleContext(ForceLetClauseContext.class, 0);
		}

		public XqContext xq() {
			return getRuleContext(XqContext.class, 0);
		}

		public XqForceLetContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqForceLet(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqForceLet(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqForceLet(this);
			else
				return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XqParenthesizedContext extends XqContext {
		public TerminalNode L_PAREN() {
			return getToken(XPathParser.L_PAREN, 0);
		}

		public XqContext xq() {
			return getRuleContext(XqContext.class, 0);
		}

		public TerminalNode R_PAREN() {
			return getToken(XPathParser.R_PAREN, 0);
		}

		public XqParenthesizedContext(XqContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterXqParenthesized(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitXqParenthesized(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitXqParenthesized(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final XqContext xq() throws RecognitionException {
		return xq(0);
	}

	private XqContext xq(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		XqContext _localctx = new XqContext(_ctx, _parentState);
		XqContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_xq, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(57);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
					case Var: {
						_localctx = new XqVarContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;

						setState(31);
						match(Var);
					}
						break;
					case STRING: {
						_localctx = new XqStringContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(32);
						match(STRING);
					}
						break;
					case DOC: {
						_localctx = new XqApContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(33);
						ap();
					}
						break;
					case L_PAREN: {
						_localctx = new XqParenthesizedContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(34);
						match(L_PAREN);
						setState(35);
						xq(0);
						setState(36);
						match(R_PAREN);
					}
						break;
					case T__1: {
						_localctx = new XqTagContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(38);
						match(T__1);
						setState(39);
						((XqTagContext) _localctx).open = tagName();
						setState(40);
						match(T__2);
						setState(41);
						match(T__3);
						setState(42);
						xq(0);
						setState(43);
						match(T__4);
						setState(44);
						match(T__5);
						setState(45);
						((XqTagContext) _localctx).close = tagName();
						setState(46);
						match(T__2);
						setState(47);
						if (!((((XqTagContext) _localctx).open != null
								? _input.getText(((XqTagContext) _localctx).open.start,
										((XqTagContext) _localctx).open.stop)
								: null)
								.equals((((XqTagContext) _localctx).close != null
										? _input.getText(((XqTagContext) _localctx).close.start,
												((XqTagContext) _localctx).close.stop)
										: null))))
							throw new FailedPredicateException(this, " $open.text.equals($close.text) ");
					}
						break;
					case FOR: {
						_localctx = new XqFLWRContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(49);
						forClause();
						setState(50);
						letClause();
						setState(51);
						whereClause();
						setState(52);
						returnClause();
					}
						break;
					case LET: {
						_localctx = new XqForceLetContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(54);
						forceLetClause();
						setState(55);
						xq(1);
					}
						break;
					default:
						throw new NoViableAltException(this);
				}
				_ctx.stop = _input.LT(-1);
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						if (_parseListeners != null)
							triggerExitRuleEvent();
						_prevctx = _localctx;
						{
							setState(68);
							_errHandler.sync(this);
							switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
								case 1: {
									_localctx = new XqCommaContext(new XqContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_xq);
									setState(59);
									if (!(precpred(_ctx, 6)))
										throw new FailedPredicateException(this, "precpred(_ctx, 6)");
									setState(60);
									match(T__0);
									setState(61);
									xq(7);
								}
									break;
								case 2: {
									_localctx = new XqSlashContext(new XqContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_xq);
									setState(62);
									if (!(precpred(_ctx, 5)))
										throw new FailedPredicateException(this, "precpred(_ctx, 5)");
									setState(63);
									match(SLASH);
									setState(64);
									rp(0);
								}
									break;
								case 3: {
									_localctx = new XqDoubleSlashContext(new XqContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_xq);
									setState(65);
									if (!(precpred(_ctx, 4)))
										throw new FailedPredicateException(this, "precpred(_ctx, 4)");
									setState(66);
									match(DOUBLE_SLASH);
									setState(67);
									rp(0);
								}
									break;
							}
						}
					}
					setState(72);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForClauseContext extends ParserRuleContext {
		public TerminalNode FOR() {
			return getToken(XPathParser.FOR, 0);
		}

		public List<VarBindingContext> varBinding() {
			return getRuleContexts(VarBindingContext.class);
		}

		public VarBindingContext varBinding(int i) {
			return getRuleContext(VarBindingContext.class, i);
		}

		public ForClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_forClause;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterForClause(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitForClause(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitForClause(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ForClauseContext forClause() throws RecognitionException {
		ForClauseContext _localctx = new ForClauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_forClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(73);
				match(FOR);
				setState(74);
				varBinding();
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__0) {
					{
						{
							setState(75);
							match(T__0);
							setState(76);
							varBinding();
						}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LetClauseContext extends ParserRuleContext {
		public TerminalNode LET() {
			return getToken(XPathParser.LET, 0);
		}

		public List<LetBindingContext> letBinding() {
			return getRuleContexts(LetBindingContext.class);
		}

		public LetBindingContext letBinding(int i) {
			return getRuleContext(LetBindingContext.class, i);
		}

		public LetClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_letClause;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterLetClause(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitLetClause(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitLetClause(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final LetClauseContext letClause() throws RecognitionException {
		LetClauseContext _localctx = new LetClauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_letClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == LET) {
					{
						setState(82);
						match(LET);
						setState(83);
						letBinding();
						setState(88);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == T__0) {
							{
								{
									setState(84);
									match(T__0);
									setState(85);
									letBinding();
								}
							}
							setState(90);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForceLetClauseContext extends ParserRuleContext {
		public TerminalNode LET() {
			return getToken(XPathParser.LET, 0);
		}

		public List<LetBindingContext> letBinding() {
			return getRuleContexts(LetBindingContext.class);
		}

		public LetBindingContext letBinding(int i) {
			return getRuleContext(LetBindingContext.class, i);
		}

		public ForceLetClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_forceLetClause;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterForceLetClause(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitForceLetClause(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitForceLetClause(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ForceLetClauseContext forceLetClause() throws RecognitionException {
		ForceLetClauseContext _localctx = new ForceLetClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_forceLetClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(93);
				match(LET);
				setState(94);
				letBinding();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__0) {
					{
						{
							setState(95);
							match(T__0);
							setState(96);
							letBinding();
						}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhereClauseContext extends ParserRuleContext {
		public TerminalNode WHERE() {
			return getToken(XPathParser.WHERE, 0);
		}

		public CondContext cond() {
			return getRuleContext(CondContext.class, 0);
		}

		public WhereClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_whereClause;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterWhereClause(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitWhereClause(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitWhereClause(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final WhereClauseContext whereClause() throws RecognitionException {
		WhereClauseContext _localctx = new WhereClauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whereClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == WHERE) {
					{
						setState(102);
						match(WHERE);
						setState(103);
						cond(0);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnClauseContext extends ParserRuleContext {
		public TerminalNode RETURN() {
			return getToken(XPathParser.RETURN, 0);
		}

		public XqContext xq() {
			return getRuleContext(XqContext.class, 0);
		}

		public ReturnClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_returnClause;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterReturnClause(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitReturnClause(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitReturnClause(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ReturnClauseContext returnClause() throws RecognitionException {
		ReturnClauseContext _localctx = new ReturnClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_returnClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(106);
				match(RETURN);
				setState(107);
				xq(0);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarBindingContext extends ParserRuleContext {
		public TerminalNode Var() {
			return getToken(XPathParser.Var, 0);
		}

		public TerminalNode IN() {
			return getToken(XPathParser.IN, 0);
		}

		public XqContext xq() {
			return getRuleContext(XqContext.class, 0);
		}

		public VarBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_varBinding;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).enterVarBinding(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener)
				((XPathListener) listener).exitVarBinding(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof XPathVisitor)
				return ((XPathVisitor<? extends T>) visitor).visitVarBinding(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final VarBindingContext varBinding() throws RecognitionException {
		VarBindingContext _localctx = new VarBindingContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(109);
				match(Var);
				setState(110);
				match(IN);
				setState(111);
				xq(0);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LetBindingContext extends ParserRuleContext {
		public TerminalNode Var() {
			return getToken(XPathParser.Var, 0);
		}

		public XqContext xq() {
			return getRuleContext(XqContext.class, 0);
		}

		public LetBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_letBinding;
		}
